--- a/Module2/webroot/index.html
+++ b/Module2/webroot/index.html
@@ -11,8 +11,8 @@
 
   <body>
 	<h1>Buddy's Travels</h1>
-	<p>My name is Buddy! I've been all over the world! Check out all
-		the places I have been.</p>
+	<p>My name is Buddy! I've been all over the world! Check 
+	    out all the places I have been.</p>
 
 	<p>Insert Picture of Buddy</p>
 
