--- a/Module2/webroot/index.html
+++ b/Module2/webroot/index.html
@@ -14,7 +14,15 @@
 	<p>My name is Buddy! I've been all over the world! Check 
 	    out all the places I have been.</p>
 
-	<p>Insert Picture of Buddy</p>
+    <h2>United States</h2>
+    <img src="photos/IMG_0785.JPG">
+    <img src="photos/IMG_0786.JPG">
+    <img src="photos/IMG_0793.JPG">
+        
+    <h2>Europe</h2>
+    <img src="photos/IMG_0790.JPG">
+    <img src="photos/IMG_0789.JPG">
+    <img src="photos/IMG_0788.JPG">	
 
   </body>
 
