--- a/Module2/webroot/index.html
+++ b/Module2/webroot/index.html
@@ -13,16 +13,19 @@
 	<h1>Buddy's Travels</h1>
 	<p>My name is Buddy! I've been all over the world! Check 
 	    out all the places I have been.</p>
+	<img src="photos/IMG_0794.JPG" width="300">
 
     <h2>United States</h2>
-    <img src="photos/IMG_0785.JPG">
-    <img src="photos/IMG_0786.JPG">
-    <img src="photos/IMG_0793.JPG">
+    <a href="html/huntsville.html">
+    	<img src="thumbnails/IMG_0785.JPG">
+    </a>
+    <a href="html/idaho.html"><img src="thumbnails/IMG_0786.JPG"></a>
+    <a href="html/nashville.html"><img src="thumbnails/IMG_0793.JPG"></a>
         
     <h2>Europe</h2>
-    <img src="photos/IMG_0790.JPG">
-    <img src="photos/IMG_0789.JPG">
-    <img src="photos/IMG_0788.JPG">	
+    <a href="html/rome.html"><img src="thumbnails/IMG_0790.JPG"></a>
+    <a href="html/france.html"><img src="thumbnails/IMG_0789.JPG"></a>
+    <a href="html/venice.html"><img src="thumbnails/IMG_0788.JPG"></a>	
 
   </body>
 
