Placeholder for solution

--- a/Module2/webroot/html/idaho.html
+++ b/Module2/webroot/html/idaho.html
@@ -11,7 +11,7 @@
 
   <body>
   
-  <h1>Nashville, Tennessee</h1>
+  <h1>Boise, Idaho</h1>
   <p>Can you believe it? REAL Idaho potatoes!</p>
   <img src="../photos/IMG_0786.JPG">
   
