--- a/Module3/webroot/about/info.html
+++ b/Module3/webroot/about/info.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>About the Rusty Ruler</title>
+        <link type="text/css" rel="stylesheet" href="../rusty.css">
     </head>
 	
     <body>
