--- a/Module3/webroot/items.html
+++ b/Module3/webroot/items.html
@@ -1,7 +1,8 @@
 
 <html>
     <head>
-        <title>The Rusty Ruler Supplies</title>       	
+        <title>The Rusty Ruler Supplies</title>     
+        <link type="text/css" rel="stylesheet" href="rusty.css">  	
     </head>
 	
     <body>
