--- a/Module3/webroot/index.html
+++ b/Module3/webroot/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>The Rusty Ruler</title>
-        <link type="text/css" rel="stylesheet" href="rusty.css">        
+        <link type="text/css" rel="stylesheet" href="rusty.css">  
+        <link href="https://fonts.googleapis.com/css?family=Diplomata" rel="stylesheet">      
     </head>
 	
     <body>
