--- a/Module4/webroot/index.html
+++ b/Module4/webroot/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>The Rusty Ruler</title>
+        <link type="text/css" rel="stylesheet" href="bootstrap.min.css"> 
+        <link type="text/css" rel="stylesheet" href="school.css"> 
         <link type="text/css" rel="stylesheet" href="rusty.css">  
-        <link href="https://fonts.googleapis.com/css?family=Diplomata" rel="stylesheet">      
+        <link href="https://fonts.googleapis.com/css?family=Diplomata" rel="stylesheet">              
     </head>
 	
     <body>            
@@ -17,7 +19,7 @@
       Aenean vel maximus tortor, nec semper augue. Vivamus dictum massa in interdum 
       ullamcorper. Integer eget accumsan velit, vitae hendrerit metus. </p>
       
-      <p class="guarantee">Our guarantee: at The Ruler, we're committed to providing 
+      <p id="guarantee">Our guarantee: at The Ruler, we're committed to providing 
       you, our guest,
       with an exceptional experience every time you visit. Whether you are
       purchasing last-minute emergency items or just stopping by to browse,
