Done with module and exercise 4

--- a/Exercise4/solution/lunch/dogs.html
+++ b/Exercise4/solution/lunch/dogs.html
@@ -1,23 +1,29 @@
 <html>
     <head>
-        <title>The Rusty Ruler</title>
-        <link type="text/css" rel="stylesheet" href="kayleigh.css">  
+        <title>Kayleigh Cooks</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
         <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
     </head>
     
     <body>
+    
+<div id="header">
+<h1>Kayleigh's Kitchen</h1>
+</div>
 
 <h1>Hot Dog Surprise</h1>
 <h3>Great for Lunch</h3>
 
-<img src="../image/dogs.jpg">
-
+<div id="ingredients">
 <h2>What you need:</h2>
 <ul>
   <li>2 Beef weiners</li>
   <li>2 Hot dog buns</li>
   <li>6 Hershey Kisses</li>
 </ul>
+</div>
+
+<img src="../image/dogs.jpg">
 
 <h2>How to make it:</h2>
 
@@ -27,6 +33,10 @@ elit. Mauris hendrerit risus ut vehicula gravida. Nunc eu tortor quis mi
 vestibulum lobortis eget eu massa. Aliquam ornare lacinia lacinia.</p> 
 
 <p>Pellentesque quis mauris vitae tellus vehicula porta.</p>
+
+<div id="footer">
+<p>&copy;2017 Kayleigh<br>Please mention me if you share my recipes!</p>
+</div>
  
 	</body>
 	
