More work on the solution.

--- a/Exercise3/solution/breakfast/smoothie.html
+++ b/Exercise3/solution/breakfast/smoothie.html
@@ -1,24 +1,41 @@
-Breakfast:
-Chocolate Banana Smoothie
+<html>
+    <head>
+        <title>Chocolate Banana Smoothie</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
+        <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
+    </head>
+    
+    <body>
+    
+<h1>Chocolate Banana Smoothie</h1>
+<h3>Great for Breakfast</h3>
 
-What you need:
+<img src="../image/smoothie.jpg">
 
-- 1 Hershey bar
-- 1 Banana (very ripe)
-- 1 cup of sugar
-- 2 cups of ice
+<h2>What you need:</h2>
+<ul>
+  <li>1 Hershey bar</li>
+  <li>1 Banana (very ripe)</li>
+  <li>1 cup of sugar</li>
+  <li>2 cups of ice</li>
+</ul>
 
-How to make it:
 
-Nunc dapibus cursus dui, vitae lacinia mi laoreet a. 
+<h2>How to make it:</h2>
+
+<p>Nunc dapibus cursus dui, vitae lacinia mi laoreet a. 
 Cras in blandit est. Aliquam porttitor leo eget mi aliquet, 
 porttitor iaculis urna semper. Nulla sed libero purus. Donec 
-tempus iaculis malesuada. 
+tempus iaculis malesuada.</p> 
 
-Orci varius natoque penatibus et magnis dis parturient montes, 
+<p>Orci varius natoque penatibus et magnis dis parturient montes, 
 nascetur ridiculus mus. Ut turpis lacus, aliquam non posuere in, 
-mollis quis erat. Vestibulum efficitur quis leo nec facilisis. 
+mollis quis erat. Vestibulum efficitur quis leo nec facilisis.</p> 
 
-Phasellus non sem at magna lacinia convallis. Nunc sagittis 
+<p>Phasellus non sem at magna lacinia convallis. Nunc sagittis 
 dictum nisi ut posuere. Aliquam vel augue non urna fringilla lacinia. 
-Cras convallis condimentum congue. Suspendisse ornare nisi sem.
+Cras convallis condimentum congue. Suspendisse ornare nisi sem.</p>
+
+	</body>
+	
+</html>
