--- a/Exercise3/solution/breakfast/toast.html
+++ b/Exercise3/solution/breakfast/toast.html
@@ -1,20 +1,36 @@
-Breakfast:
-Chocolate Toast
+<html>
+    <head>
+        <title>Chocolate Toast</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
+        <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
+    </head>
+    
+    <body>
 
-What you need:
+<h1>Chocolate Toast</h1>
+<h3>Great for Breakfast</h3>
 
-- 1 Hershey bar
-- 2 Pieces of bread
-- 1/2 Cup chocolate syrup
+<img src="../image/toast.jpg">
 
-How to make it:
+<h2>What you need:</h2>
+<ul>
+  <li>1 Hershey bar</li>
+  <li>2 Pieces of bread</li>
+  <li>1/2 Cup chocolate syrup</li>
+</ul>
 
-Aenean accumsan condimentum mi et porttitor. Etiam sagittis mi 
+<h2>How to make it:</h2>
+
+<p>Aenean accumsan condimentum mi et porttitor. Etiam sagittis mi 
 vitae est pulvinar commodo. Suspendisse sodales risus et quam 
-facilisis blandit. 
+facilisis blandit.</p> 
 
-Phasellus et felis accumsan, aliquam nisi eget, pharetra nisl. 
+<p>Phasellus et felis accumsan, aliquam nisi eget, pharetra nisl.</p> 
 
-In commodo augue at elit interdum, posuere commodo justo feugiat. 
+<p>In commodo augue at elit interdum, posuere commodo justo feugiat. 
 Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi 
-tempus bibendum nibh, tincidunt tincidunt neque gravida vel. 
+tempus bibendum nibh, tincidunt tincidunt neque gravida vel.</p>
+
+	</body>
+	
+</html> 
