--- a/Exercise3/solution/dinner/fried.html
+++ b/Exercise3/solution/dinner/fried.html
@@ -1,21 +1,37 @@
-Dinner:
-Deep Fried Chocolate
+<html>
+    <head>
+        <title>Deep Fried Chocolate</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
+        <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
+    </head>
+    
+    <body>
 
-What you need:
+<h1>Deep Fried Chocolate</h1>
+<h3>Great for Dinner</h3>
 
-- 1 Can Crisco
-- 5 Hershey bars
+<img src="../image/fried.jpg">
 
-How to make it:
+<h2>What you need:</h2>
+<ul>
+  <li>1 Can Crisco</li>
+  <li>5 Hershey bars</li>
+</ul>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam 
+<h2>How to make it:</h2>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam 
 et nisi sit amet magna semper vulputate. Fusce et nulla at urna 
 ullamcorper semper. Vivamus ipsum neque, auctor ac facilisis nec, 
-feugiat et est. 
+feugiat et est.</p> 
 
-Donec semper, lorem varius suscipit porttitor, eros orci facilisis 
-quam, et bibendum augue elit vel urna. 
+<p>Donec semper, lorem varius suscipit porttitor, eros orci facilisis 
+quam, et bibendum augue elit vel urna.</p> 
 
-Vestibulum ultricies tristique aliquam. 
+<p>Vestibulum ultricies tristique aliquam.</p> 
 
-Morbi consectetur faucibus nisl, vel lacinia massa tincidunt vitae. 
+<p>Morbi consectetur faucibus nisl, vel lacinia massa tincidunt vitae.</p> 
+
+	</body>
+	
+</html>
