--- a/Exercise3/solution/dinner/helper.html
+++ b/Exercise3/solution/dinner/helper.html
@@ -1,22 +1,38 @@
-Dinner:
-Chocolate Helper
+<html>
+    <head>
+        <title>Chocolate Helper</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
+        <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
+    </head>
+    
+    <body>
 
-What you need:
+<h1>Chocolate Helper</h1>
+<h3>Great for Dinner</h3>
 
-- 1 Box Hamburger Helper
-- 1 pound ground beef
-- 1 Cup Nesley Quick powder
+<img src="../image/helper.jpg">
 
-How to make it:
+<h2>What you need:</h2>
+<ul>
+  <li>1 Box Hamburger Helper</li>
+  <li>1 pound ground beef</li>
+  <li>1 Cup Nesley Quick powder</li>
+</ul>
 
-Donec scelerisque, velit vitae tincidunt fermentum, quam velit 
+<h2>How to make it:</h2>
+
+<p>Donec scelerisque, velit vitae tincidunt fermentum, quam velit 
 euismod tortor, quis aliquet lectus nisl ut est. Nunc 
-cursus eros vel leo mollis suscipit. Fusce rhoncus ac dui eget congue. 
+cursus eros vel leo mollis suscipit. Fusce rhoncus ac dui eget congue.</p> 
 
-Phasellus ac dolor velit. Nulla hendrerit lacus id dui iaculis, eget 
+<p>Phasellus ac dolor velit. Nulla hendrerit lacus id dui iaculis, eget 
 dapibus libero convallis. Praesent tincidunt odio blandit diam pellentesque 
-vehicula. Donec sed leo pellentesque, bibendum quam eu, bibendum nulla. 
+vehicula. Donec sed leo pellentesque, bibendum quam eu, bibendum nulla.</p> 
 
-Curabitur hendrerit augue vitae facilisis rutrum. Nullam vitae purus id 
+<p>Curabitur hendrerit augue vitae facilisis rutrum. Nullam vitae purus id 
 dolor placerat aliquet in ac neque. Pellentesque sed aliquet diam, ut pellentesque 
-elit. 
+elit.</p> 
+
+	</body>
+	
+</html>
