--- a/Exercise3/solution/lunch/dogs.html
+++ b/Exercise3/solution/lunch/dogs.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>The Rusty Ruler</title>
-        <link type="text/css" rel="stylesheet" href="kayleigh.css">  
+        <title>Hot Dog Surprise</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
         <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
     </head>
     
