--- a/Exercise3/solution/lunch/soup.html
+++ b/Exercise3/solution/lunch/soup.html
@@ -1,26 +1,41 @@
+<html>
+    <head>
+        <title>Chocolate Soup</title>
+        <link type="text/css" rel="stylesheet" href="../kayleigh.css">  
+        <link href="https://fonts.googleapis.com/css?family=Bubbler+One" rel="stylesheet">     
+    </head>
+    
+    <body>
+    
 
-Lunch:
-Chocolate And Soup
+<h1>Chocolate And Soup</h1>
+<h3>Great for Lunch</h3>
 
-What you need:
+<img src="../image/soup.jpg">
 
-- 2 Hershey bar2
-- 1 Can Chicken Noodle Soup
-- 5 Crackers
+<h2>What you need:</h2>
+<ul>
+  <li>2 Hershey bars</li>
+  <li>Can Chicken Noodle Soup</li>
+  <li>Crackers</li>
+</ul>
 
-How to make it:
+<h2>How to make it:</h2>
 
-Aenean cursus ultrices ipsum id gravida. Proin placerat malesuada lacinia. 
-Etiam faucibus arcu magna, a dignissim mauris efficitur in. 
+<p>Aenean cursus ultrices ipsum id gravida. Proin placerat malesuada lacinia. 
+Etiam faucibus arcu magna, a dignissim mauris efficitur in.</p> 
 
-Donec et tellus vehicula purus scelerisque laoreet. Donec ultrices ligula 
+<p>Donec et tellus vehicula purus scelerisque laoreet. Donec ultrices ligula 
 eget nunc volutpat luctus. Praesent a neque nulla. Quisque magna arcu, 
 elementum sit amet imperdiet a, congue vitae tellus. Ut placerat sed ex 
-at euismod.
+at euismod.</p>
 
-Donec scelerisque diam vitae lorem tincidunt, et vestibulum diam commodo. 
+<p>Donec scelerisque diam vitae lorem tincidunt, et vestibulum diam commodo.</p> 
 
-In a nisi non libero luctus lacinia. Suspendisse potenti. Mauris tempor metus 
+<p>In a nisi non libero luctus lacinia. Suspendisse potenti. Mauris tempor metus 
 in velit ornare mollis. Duis rhoncus neque at quam mattis interdum. Aenean sit 
-amet interdum odio. 
+amet interdum odio.</p> 
 
+	</body>
+	
+</html>
