--- a/Module6/webroot/index.html
+++ b/Module6/webroot/index.html
@@ -1,1 +1,7 @@
 Hello test test
+
+<form action="/cgi/SignUp" method="post">
+<input type="text" name="Name"><br>
+<input type="text" name="Age"><br>
+<input type="submit" value="Submit">
+</form>
