First pass of course complete

--- a/Module6/webroot/index.html
+++ b/Module6/webroot/index.html
@@ -1,7 +1,27 @@
-Hello test test
+<html>
+<head>
 
-<form action="/cgi/SignUp" method="post">
-<input type="text" name="Name"><br>
-<input type="text" name="Age"><br>
-<input type="submit" value="Submit">
+<style>
+</style>
+
+</head>
+<body>
+
+<h1>Tell us about you</h1>
+
+<form id="about" action="/index.html" method="GET">
+
+Email: <input name="a" type="email"><br><br>
+
+Date: <input name="b" type="date"><br><br>
+
+Telephone: <input name="c" type="tel"><br><br>
+
+<br><br>
+
+<input type="submit">
+
 </form>
+
+</body>
+</html>
