floating the image to the left and title to the center

--- a/Course_Online/Exercise2/WebContent/index.html
+++ b/Course_Online/Exercise2/WebContent/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-<img src="kidspace.jpg" height="100"/>
+<img src="kidspace.jpg" height="100" style="float:left"/>
 <span id="titleText">Kid Space</span>
 <div class="floatright" id="drop-menu">
 Choose a Constellation
